--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculadora de Tabuada</title>
 </head>
 <body>
-    <h1>Calculadora de Tabuada</h1>
-    <form action="tabuada.php" method="post">
-        <label for="numero">Digite um número:</label>
-        <input type="number" id="numero" name="numero" required>
-        <button type="submit">Calcular</button>
-    </form>
+<form action="tabuada.php" method="post">
+    <div class="brutalist-card">
+        <div class="brutalist-card__header">
+            <div class="brutalist-card__icon">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
+                ></path>
+            </svg>
+        </div>
+    <div class="brutalist-card__alert">Tabuada</div>
+    </div>
+        <div class="brutalist-card__message">
+            Insira o Número que você deseja ver sua tabuada completa:
+        </div>
+        <div class="brutalist-card__actions">
+              <input class="brutalist-card__button brutalist-card__button--mark" 
+                 type="number" 
+                placeholder="Número" />
+                <button class="brutalist-card__button brutalist-card__button--read" type="submit">
+                Okay
+                </button>
+</div>
+    </div>
+</form>
 </body>
 </html>
